@@ -41,6 +41,7 @@
   - Add rename action. BZ #694698
   - Added detection of mixed_mode tags to XmlClean. BZ #688286
   - Fix version 0 not installing on web site. BZ #702550
+  - Don't validate xml parsed as text in print_unused. BZ #705956
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
